--- a/airReservation.html
+++ b/airReservation.html
@@ -2,7 +2,7 @@
  * @Description: 预定页面
  * @Author: wish.WuJunLong
  * @Date: 2021-08-03 15:57:24
- * @LastEditTime: 2021-09-07 17:48:21
+ * @LastEditTime: 2021-09-14 18:27:26
  * @LastEditors: wish.WuJunLong
 -->
 
@@ -10,7 +10,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/base.css" />
@@ -36,7 +36,7 @@
     <div class="air_reservation">
       <div class="air_header">
         <div class="air_title">机票预定</div>
-        <button class="air_back_btn ax-primary ax-btn">返 回</button>
+        <button class="air_back_btn ax-primary ax-btn ax-ripple">返 回</button>
       </div>
       <div class="air_message"></div>
 
@@ -75,7 +75,7 @@
           <div class="list_input">
             <input
               name="contactEmail"
-              placeholder="输入名邮箱"
+              placeholder="输入邮箱"
               value=""
               class="ax-md contact_input"
               type="text"
@@ -93,7 +93,9 @@
           <span>CNY</span>
         </div>
 
-        <button type="button" class="pay_btn ax-btn ax-primary ax-square">预 定</button>
+        <button type="button" class="pay_btn ax-btn ax-ripple ax-primary ax-square">
+          预 定
+        </button>
       </div>
     </div>
 
@@ -108,7 +110,10 @@
           <div class="ax-tips-title"></div>
           <div class="ax-tips-des"></div>
           <div class="ax-tips-btn">
-            <button type="button" class="ax-btn ax-longer ax-primary ax-window-close">
+            <button
+              type="button"
+              class="ax-btn ax-ripple ax-longer ax-primary ax-window-close"
+            >
               关 闭
             </button>
           </div>
@@ -127,7 +132,10 @@
           <div class="ax-tips-title"></div>
           <div class="ax-tips-des"></div>
           <div class="ax-tips-btn">
-            <button type="button" class="ax-btn ax-longer ax-primary ax-window-close">
+            <button
+              type="button"
+              class="ax-btn ax-ripple ax-longer ax-primary ax-window-close"
+            >
               关 闭
             </button>
           </div>
@@ -138,6 +146,8 @@
     <script src="plugins/jquery-1.10.2.min.js"></script>
     <script src="plugins/ax.min.js"></script>
     <script src="plugins/mobiscroll.jquery.min.js"></script>
+
+    <script src="js/config.js"></script>
 
     <script>
       // 返回航班列表
@@ -426,7 +436,11 @@
           '<div class="list_item">' +
           '<div class="item_name">出生日期：</div>' +
           '<div class="item_input">' +
-          '<input placeholder="输入出生日期" name="date" value="" class="ax-md pas_data" type="text" id="pas_birthday_'+i+'" onfocus="getBirthdayTimeDate('+i+')"/>' +
+          '<input placeholder="输入出生日期" name="date" value="" class="ax-md pas_data" type="text" id="pas_birthday_' +
+          i +
+          '" onfocus="getBirthdayTimeDate(' +
+          i +
+          ')"/>' +
           "</div>" +
           "</div>" +
           '<div class="list_item">' +
@@ -459,7 +473,11 @@
           '<div class="list_item">' +
           '<div class="item_name">到期日期：</div>' +
           '<div class="item_input">' +
-          '<input placeholder="输入证件到期日期" name="date" value="" class="ax-md pas_data" id="pas_cardExpired_'+i+'" onfocus="getCardExpiredTimeDate('+i+')" type="text"/>' +
+          '<input placeholder="输入证件到期日期" name="date" value="" class="ax-md pas_data" id="pas_cardExpired_' +
+          i +
+          '" onfocus="getCardExpiredTimeDate(' +
+          i +
+          ')" type="text"/>' +
           "</div>" +
           "</div>" +
           "</div>";
@@ -503,7 +521,11 @@
           '<div class="list_item">' +
           '<div class="item_name">出生日期：</div>' +
           '<div class="item_input">' +
-          '<input placeholder="输入出生日期" value="" class="ax-md pas_data" type="text" id="pas_chd_birthday_'+i+'" onfocus="getCHDBirthdayTimeDate('+i+')"/>' +
+          '<input placeholder="输入出生日期" value="" class="ax-md pas_data" type="text" id="pas_chd_birthday_' +
+          i +
+          '" onfocus="getCHDBirthdayTimeDate(' +
+          i +
+          ')"/>' +
           "</div>" +
           "</div>" +
           '<div class="list_item">' +
@@ -536,7 +558,11 @@
           '<div class="list_item">' +
           '<div class="item_name">到期日期：</div>' +
           '<div class="item_input">' +
-          '<input placeholder="输入证件到期日期" value="" class="ax-md pas_data" type="text" id="pas_chd_cardExpired_'+i+'" onfocus="getCHDCardExpiredTimeDate('+i+')"/>' +
+          '<input placeholder="输入证件到期日期" value="" class="ax-md pas_data" type="text" id="pas_chd_cardExpired_' +
+          i +
+          '" onfocus="getCHDCardExpiredTimeDate(' +
+          i +
+          ')"/>' +
           "</div>" +
           "</div>" +
           "</div>";
@@ -560,7 +586,11 @@
           "</div>" +
           '<div class="price_tip">附加费用：<span>' +
           airMessage.fareQuotes[i].tax +
-          "</span></div>" +
+          "</span> x" +
+          (airMessage.fareQuotes[i].passengerType === 0
+            ? passengerData.adultNumber
+            : passengerData.childNumber) +
+          "</div>" +
           "</div>";
 
         // 总金额计算
@@ -592,6 +622,7 @@
           .calendar({
             theme: "ax",
             lang: "zh",
+            touchUi: false,
             onBeforeShow: function (event, inst) {
               //显示前的点击事件
               $("#" + this.id).addClass("ax-focus"); //input焦点
@@ -603,16 +634,21 @@
             },
             display: "bubble",
             dateFormat: "yy-mm-dd",
-            max: new Date(new Date().getFullYear() - 12, new Date().getMonth(), new Date().getDate())
+            max: new Date(
+              new Date().getFullYear() - 12,
+              new Date().getMonth(),
+              new Date().getDate()
+            ),
           });
       }
-      function getCardExpiredTimeDate(val){
-         // 日期选择器
-         $("#pas_cardExpired_" + val)
+      function getCardExpiredTimeDate(val) {
+        // 日期选择器
+        $("#pas_cardExpired_" + val)
           .mobiscroll()
           .calendar({
             theme: "ax",
             lang: "zh",
+            touchUi: false,
             onBeforeShow: function (event, inst) {
               //显示前的点击事件
               $("#" + this.id).addClass("ax-focus"); //input焦点
@@ -624,12 +660,11 @@
             },
             display: "bubble",
             dateFormat: "yy-mm-dd",
-            min: new Date()
+            min: new Date(),
           });
-      };
+      }
 
-
-            // 儿童乘客日期处理
+      // 儿童乘客日期处理
       function getCHDBirthdayTimeDate(val) {
         // 日期选择器
         $("#pas_chd_birthday_" + val)
@@ -637,6 +672,7 @@
           .calendar({
             theme: "ax",
             lang: "zh",
+            touchUi: false,
             onBeforeShow: function (event, inst) {
               //显示前的点击事件
               $("#" + this.id).addClass("ax-focus"); //input焦点
@@ -648,17 +684,26 @@
             },
             display: "bubble",
             dateFormat: "yy-mm-dd",
-            min: new Date(new Date().getFullYear() - 12, new Date().getMonth(), new Date().getDate()),
-            max: new Date(new Date().getFullYear() - 2, new Date().getMonth(), new Date().getDate() - 1)
+            min: new Date(
+              new Date().getFullYear() - 12,
+              new Date().getMonth(),
+              new Date().getDate()
+            ),
+            max: new Date(
+              new Date().getFullYear() - 2,
+              new Date().getMonth(),
+              new Date().getDate() - 1
+            ),
           });
       }
-      function getCHDCardExpiredTimeDate(val){
-         // 日期选择器
-         $("#pas_chd_cardExpired_" + val)
+      function getCHDCardExpiredTimeDate(val) {
+        // 日期选择器
+        $("#pas_chd_cardExpired_" + val)
           .mobiscroll()
           .calendar({
             theme: "ax",
             lang: "zh",
+            touchUi: false,
             onBeforeShow: function (event, inst) {
               //显示前的点击事件
               $("#" + this.id).addClass("ax-focus"); //input焦点
@@ -670,11 +715,9 @@
             },
             display: "bubble",
             dateFormat: "yy-mm-dd",
-            min: new Date()
+            min: new Date(),
           });
-      };
-
-
+      }
 
       // 返回时间 年-月-日
       function getNotTimeDate(val) {
@@ -736,7 +779,7 @@
 
           let data = {
             sessionID: "20210817143319143",
-            config: "BA",
+            config: airMessage.validatingCarrier,
             tripType: 2,
             bookdata: null,
             routing: airMessage,
@@ -748,7 +791,7 @@
 
           console.log(data);
           $("#loading").show();
-          fetch("http://192.168.0.35:6212/ba/order", {
+          fetch(config.airConfig[airMessage.validatingCarrier] + "/order", {
             method: "POST",
             body: JSON.stringify(data),
           })
@@ -759,7 +802,15 @@
               console.log(data);
               $("#loading").hide();
               if (data.status === 0) {
-                window.open("/airdetails.html?pnr=" + data.pnrCode, "target");
+                window.open(
+                  "/airdetails.html?pnr=" +
+                    data.pnrCode +
+                    "&o=" +
+                    airMessage.otherCode +
+                    "&t=" +
+                    airMessage.validatingCarrier,
+                  "target"
+                );
                 $("#success_tip").addClass("ax-window-show");
                 $(".ax-tips-title").html("航班预定成功");
                 $(".ax-tips-des").html(data.message);
@@ -769,6 +820,12 @@
                 $(".ax-tips-title").html("获取数据失败");
                 $(".ax-tips-des").html(data.message);
               }
+            })
+            .catch(function (e) {
+              $("#loading").hide();
+              $("#warning_tip").addClass("ax-window-show");
+              $(".ax-tips-title").html("访问错误");
+              $(".ax-tips-des").html("数据获取失败，请检查网络连接或联系管理员");
             });
         });
       });
