--- a/airDetails.html
+++ b/airDetails.html
@@ -2,7 +2,7 @@
  * @Description: 详情页
  * @Author: wish.WuJunLong
  * @Date: 2021-08-31 09:38:41
- * @LastEditTime: 2021-09-15 09:33:53
+ * @LastEditTime: 2021-09-15 11:59:55
  * @LastEditors: wish.WuJunLong
 -->
 
@@ -281,7 +281,7 @@
         if (r != null) {
           return unescape(r[2]);
         }
-        return null;
+        return '';
       }
 
       // 修改地址栏参数
@@ -302,7 +302,7 @@
       }
 
       var pnrCode = getQueryString("pnr"); // 获取PNR
-      var otherCode = getQueryString("o"); // 获取otheroce
+      var otherCode = getQueryString("o")?getQueryString("o"):''; // 获取otheroce
       var configType = getQueryString("t"); // 获取渠道
 
       getDomData(); // 获取订单详情
@@ -555,6 +555,7 @@
 
       // 组装页面数据
       function getDomData(val) {
+        $("#loading").show();
         oneAirMessage = []; // 去程数据
         retAirMessage = []; // 返程数据
         var paramsData = {
@@ -911,16 +912,21 @@
               $("#loading").hide();
               if (data.status === 0) {
                 // 航班信息
-                // changeURLStatic("pnr", data.pnrCode);
-                // pnrCode = data.pnrCode;
+
+                window.open(
+                  "/airdetails.html?pnr=" +
+                    data.pnrCode +
+                    (data.otherCode ? "&o=" + data.otherCode : "") +
+                    "&t=" +
+                    configType,
+                  "target"
+                );
+                getDomData();
 
                 $("#selectOrderMessage").removeClass("ax-window-show");
                 $("#success_tip").addClass("ax-window-show");
                 $("#success_tip .ax-tips-title").html("订单拆分成功");
                 $("#success_tip .ax-tips-des").html("已获取最新订单数据");
-
-                getDomData();
-                window.open("/airdetails.html?pnr=" + data.pnrCode, "target");
               } else {
                 $("#warning_tip").addClass("ax-window-show");
                 $("#warning_tip .ax-tips-title").html("获取数据失败");
