--- a/airReservation.html
+++ b/airReservation.html
@@ -2,7 +2,7 @@
  * @Description: 预定页面
  * @Author: wish.WuJunLong
  * @Date: 2021-08-03 15:57:24
- * @LastEditTime: 2021-09-16 11:18:50
+ * @LastEditTime: 2021-09-17 15:15:11
  * @LastEditors: wish.WuJunLong
 -->
 
@@ -86,11 +86,13 @@
 
       <!-- 金额计算 -->
       <div class="price_box">
-        <div class="price_list"></div>
-        <div class="price_total">
-          总价
-          <p>8960</p>
-          <span>CNY</span>
+        <div class="price_main">
+          <div class="price_list"></div>
+          <div class="price_total">
+            总价
+            <p>8960</p>
+            <span>CNY</span>
+          </div>
         </div>
 
         <button type="button" class="pay_btn ax-btn ax-ripple ax-primary ax-square">
@@ -161,11 +163,11 @@
 
       // 航班信息
       var airMessage = JSON.parse(sessionStorage.getItem("airMessage"));
-      // sessionStorage.removeItem("airMessage");
+      sessionStorage.removeItem("airMessage");
       console.log(airMessage);
       // 乘客信息
       var passengerData = JSON.parse(sessionStorage.getItem("passengerMessage"));
-      // sessionStorage.removeItem("passengerMessage");
+      sessionStorage.removeItem("passengerMessage");
 
       // 组装航班数据
       function getTicketDetail(val, retVal) {
